--- a/components/ProductCard/style.module.css
+++ b/components/ProductCard/style.module.css
@@ -1,16 +1,3 @@
-.resultsSummary {
-    margin: 16px 0;
-    color: #757575;
-    font-size: 0.875rem;
-}
-
-.productGrid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(256px, 1fr));
-    grid-auto-flow: dense;
-    grid-gap: 0; 
-    margin: 0 -8px;
-}
 .productCard {
     padding: 16px 8px;
 }
@@ -24,6 +11,7 @@
 }
 .productCard figure > .image {
     width: 100%;
+    height: 100%;
 }
 .productCard figure > .badge {
     position: absolute;
